Removed orientated / isotropic flag from phaseFunc codes. Need to revalidate standard outputs. Need to debug symbol class for SHARED_EXPORT and the like. Adding scatdb_ryan plugin for querying the scatdb database for oneellip.
The next steps are to:
- Extend oneellip to use scatdb as a provider for aeffs, ars and mds for scattering code comparisons.
- Add scatdb-formatted database output support. Just specify flake type and dipole spacing and watch 
  the rest get filled in automatically.
- Revalidate
- Debug SHARED_EXPORT.



git-svn-id: file:///mnt/svn/rtmath@1790 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/CMakeLists.txt
+++ b/rtmath/plugins/CMakeLists.txt
@@ -61,6 +61,11 @@ if (BUILD_PLUGINS)
 	if (BUILD_PLUGIN_ROOT)
 		add_subdirectory (root)
 	endif()
+	option (BUILD_PLUGIN_SCATDB_RYAN
+		"Scatdb_Ryan plugin provides database I/O" ON)
+	if (BUILD_PLUGIN_SCATDB_RYAN)
+		add_subdirectory (scatdb_ryan)
+	endif()
 	option (BUILD_PLUGIN_SILO
 		"Build SILO IO plugin" ON)
 	if (BUILD_PLUGIN_SILO)
