oneellip lookups with scatdb_ryan give nan values. Need to add error logging to the code. Need to also add database persistance.
git-svn-id: file:///mnt/svn/rtmath@1791 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/scatdb_ryan/CMakeLists.txt
+++ b/rtmath/plugins/scatdb_ryan/CMakeLists.txt
@@ -14,6 +14,6 @@ addlib(rtmath_plugin_scatdb_ryan SHARED)
 include_directories("${CMAKE_CURRENT_BINARY_DIR}/../../rtmath")
 
 
-target_link_libraries(rtmath_plugin_scatdb_ryan ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat )
+target_link_libraries(rtmath_plugin_scatdb_ryan ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat scatdb_ryan)
 addplugin(rtmath_plugin_scatdb_ryan non_dda rtmath)
 
