Created shape-hogan-select app, which iterates through a directory, selects cases matching the needed max dimension range, and constructs an output directory.
Can be chained with the holly run reconstruction code for the original rounded particles.



git-svn-id: file:///mnt/svn/rtmath@1805 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -60,6 +60,7 @@ addappdir(shape ON)
 addappdir(shape-depth-info ON)
 addappdir(shape-extract OFF)
 addappdir(shape-hash OFF)
+addappdir(shape-hogan-select OFF)
 addappdir(shape-hull OFF)
 addappdir(shape-match-parent OFF)
 addappdir(shape-perturb-interior OFF)
