Trying to reassimilate holly stuff. Getting Eigen error on avgfile construction.
git-svn-id: file:///mnt/svn/rtmath@1806 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -23,6 +23,7 @@ addappdir(arm-sacr OFF)
 addappdir(combo ON)
 addappdir(comborows ON)
 addappdir(conv-units ON)
+addappdir(ddscat-collect-run-holly OFF)
 addappdir(ddscat-data OFF)
 addappdir(ddscat-ddpar OFF)
 addappdir(ddscat-generate-ellipsoid OFF)
