--- a/rtmath/plugins/CMakeLists.txt
+++ b/rtmath/plugins/CMakeLists.txt
@@ -61,6 +61,11 @@ if (BUILD_PLUGINS)
 	if (BUILD_PLUGIN_PSQL)
 		add_subdirectory (psql)
 	endif()
+	option (BUILD_PLUGIN_QHULL
+		"Build quickhull plugin" ON)
+	if (BUILD_PLUGIN_QHULL)
+		add_subdirectory(qhull)
+	endif()
 	option (BUILD_PLUGIN_ROOT
 		"Build ROOT plugin (io and plotting)" OFF)
 	if (BUILD_PLUGIN_ROOT)
