Added lowess program.
git-svn-id: file:///mnt/svn/rtmath@1818 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -43,6 +43,7 @@ addappdir(guess-temp ON)
 addappdir(image-basic OFF)
 addappdir(integ-paper-1 OFF)
 addappdir(liu-regenerate-runs OFF)
+addappdir(lowess ON)
 #addappdir(mie-onesphere ON)
 #addappdir(mie-slice ON)
 addappdir(oneellip ON)
