I need to write code for a least-squaress solver for a gaussian fitting routine.
git-svn-id: file:///mnt/svn/rtmath@1819 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -63,6 +63,7 @@ addappdir(shape-depth-info ON)
 addappdir(shape-extract OFF)
 addappdir(shape-hash OFF)
 addappdir(shape-hogan-select OFF)
+addappdir(shape-hogan-measure OFF)
 addappdir(shape-hull OFF)
 addappdir(shape-match-parent OFF)
 addappdir(shape-perturb-interior OFF)
