Attempted to use Burkhart's linear least squares, but it turns out that this problem cannot be linearized. I just discovered the lmfit package, though, that provides a Levenberg-Marquardt minimization routine. http://apps.jcns.fz-juelich.de/doku/sc/lmfit
I'll implement this tomorrow and move on to testing.



git-svn-id: file:///mnt/svn/rtmath@1820 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/shape-hogan-measure/CMakeLists.txt
+++ b/rtmath/rtmath-apps/shape-hogan-measure/CMakeLists.txt
@@ -7,7 +7,8 @@ include (commonRtmathApps)
 #find_package(Ceres REQUIRED)
 #include_directories(${CERES_INCLUDE_DIRS})
 
-add_executable (rtmath-hogan-measure hogan-measure.cpp)
+add_executable (rtmath-hogan-measure hogan-measure.cpp
+	llsq.hpp llsq.cpp)
 addapp( rtmath-hogan-measure Shapes)
 target_link_libraries(rtmath-hogan-measure
 	${rtmath_ddscat-libs} rtmath_core rtmath_ddscat
