I have a method that finds kappa. Need to extend the program to handle different max dimension classes, and then group in increments of 0.4 mm in maximum dimension.
git-svn-id: file:///mnt/svn/rtmath@1821 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/shape-hogan-measure/CMakeLists.txt
+++ b/rtmath/rtmath-apps/shape-hogan-measure/CMakeLists.txt
@@ -6,12 +6,16 @@ include (commonRtmathApps)
 #include_directories(${EIGEN3_INCLUDE_DIR})
 #find_package(Ceres REQUIRED)
 #include_directories(${CERES_INCLUDE_DIRS})
+find_package(lmfit REQUIRED)
+include_directories(${LMFIT_INCLUDE_DIRS})
 
 add_executable (rtmath-hogan-measure hogan-measure.cpp
-	llsq.hpp llsq.cpp)
+	#llsq.hpp llsq.cpp
+	)
 addapp( rtmath-hogan-measure Shapes)
 target_link_libraries(rtmath-hogan-measure
 	${rtmath_ddscat-libs} rtmath_core rtmath_ddscat
+	${LMFIT_LIBRARIES}
 	# ${CERES_LIBRARIES}
 	)
 
