The sphere example works. Next, I need to construct a separate program to provide tabulated volume fractions for various regions of each shape. This will include: - the shape type - the max dimension - the effective radius - the Voronoi interior volume fraction - the whole convoluted volume fraction - the convoluted volume fraction of the interior (at 3 conv depths) - the convoluted volume fraction of the surface (at 3 conv depths)
Need to write the convolution case where a boundary is present.

Then, do stata binning of various quantities.
Only consider 200 um flakes. Will handle rounded, oblate and prolate separately.
Examine in bins vs max dimension.



git-svn-id: file:///mnt/svn/rtmath@1824 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/silo/CMakeLists.txt
+++ b/rtmath/plugins/silo/CMakeLists.txt
@@ -23,6 +23,7 @@ add_library (rtmath_plugin_silo SHARED
 	plugin-silo.cpp
 	plugin-silo.h
 	silo-shapefile.cpp
+	silo-sphereVol.cpp
 	#silo-ddOutput.cpp
 	silo-voronoi.cpp
 	#CurveMesh3d.cpp
