Adding the volume fraction tabulation code. Mostly complete, except for the convolution operations. I still need to write the code for performing the convolution over a restricted domain (the interior only / the exterior only). Then, I'll compile and test the code and generate some plots.
git-svn-id: file:///mnt/svn/rtmath@1825 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -74,6 +74,7 @@ addappdir(stats ON)
 #addappdir(tmatrix-optimize-with-ddscat OFF)
 #addappdir(tmatrix-slice ON)
 addappdir(test-cgal-1 OFF)
+addappdir(vf OFF)
 addappdir(visualize-orientation-weights OFF)
 addappdir(visualize-shape-batch OFF)
 addappdir(visualize-shape-batch-fast OFF)
