Adding the oneellip-table program, providing the last bit of programming for the Bourassa project.
git-svn-id: file:///mnt/svn/rtmath@1837 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -48,6 +48,7 @@ addappdir(lowess ON)
 #addappdir(mie-slice ON)
 addappdir(oneellip ON)
 addappdir(oneellip-parallel OFF)
+addappdir(oneellip-table ON)
 addappdir(orientation-ensembles OFF)
 addappdir(orientation-output-table OFF)
 addappdir(orientation-weights OFF)
