--- a/ryan-debug/cmake-settings.h.in
+++ b/ryan-debug/cmake-settings.h.in
@@ -1,9 +1,9 @@
 #pragma once
 
-#define RYAN_DEBUG_MAJOR @MAJOR@
-#define RYAN_DEBUG_MINOR @MINOR@
-#define RYAN_DEBUG_REVISION @REVISION@
-#define RYAN_DEBUG_SVNREVISION @SVNREVISION@
+#define RYAN_DEBUG_MAJOR @RDMAJOR@
+#define RYAN_DEBUG_MINOR @RDMINOR@
+#define RYAN_DEBUG_REVISION @RDREVISION@
+#define RYAN_DEBUG_SVNREVISION 0
 
 #define SYS_RTC "@DATA_DIR_PREFIX@/data/ryan_debug.conf"
 #define RYAN_DEBUG_REGISTRY_PLUGINS_OVERRIDE_DIR "@REGISTRY_PLUGINS_OVERRIDE_DIR@"
