All core libraries again build.
The libraries build again on Ubuntu.

Tasks:
- Fix Ryan_Debug config file dependency
- Redo install locations
- Get plugins to build
- Get apps to build; remove old apps
- Set tests to not automatically build
- Add plugin for libicedb
- Re-add package generation. Build for Ubuntus, Fedoras, Windows.
- Port changes from libicedb for Ryan_Debug subsystem. Get it to build
on OS X and FreeBSD.
- Add documentation
- Fix build instructions to list the correct library requirements
- Package plugin dependencies that are not easily found

--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -53,7 +53,7 @@ include_directories(BEFORE SYSTEM ${Boost_INCLUDE_DIR})
 link_directories(${Boost_LIBRARY_DIR})
 
 # linterp is in the related directory
-include_directories(BEFORE "${CMAKE_SOURCE_DIR}/related/linterp/rncarpio-linterp-ca556a0/src")
+include_directories(BEFORE "${CMAKE_CURRENT_SOURCE_DIR}/../related/linterp/rncarpio-linterp-ca556a0/src")
 
 #message("${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY}")
 
