--- a/rtmath/rtmath/rtmath/cmake-settings.h.in
+++ b/rtmath/rtmath/rtmath/cmake-settings.h.in
@@ -6,5 +6,5 @@
 #define RTMATH_MAJOR @MAJOR@
 #define RTMATH_MINOR @MINOR@
 #define RTMATH_REVISION @REVISION@
-#define RTMATH_SVNREVISION @SVNREVISION@
+//#define RTMATH_SVNREVISION @SVNREVISION@
 
